--- a/requirements.txt
+++ b/requirements.txt
@@ -3,8 +3,11 @@ pybind11==2.13.6
 build==1.2.2
 numpy==2.1.2
 scipy==1.14.1
+tensorboardX
+tensorboard
 hydra-core
 omegaconf
 pytorch_lightning
 torch
 torchvision
+dvc
